Started basic dashboard Operations
